tests/bad/missing_import.oc
/// fail: Couldn't find this identifier: OldVector


def foo(v: &OldVector) {}

def main() {
    let v = 1
    foo(&v)
}